--- a/index.html
+++ b/index.html
@@ -1,69 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/vendor.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <script defer src="js/main.js"></script>
-</head>
-<body>
-  <header class="header">
-    <div class="container">
-      .header
-    </div>
-  </header>
-  <div class="container">
-  <h1>
-    h1     Lorem ipsum dolor sit
-  </h1>
-  <h2>
-    h2   Lorem ipsum dolor sit
-  </h2>
-  <h3>
-    h3    Lorem ipsum dolor sit
-  </h3>
-
-
-  <p class="p1 p1--yellow">
-    p1     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat? Doloremque, nemo libero quo omnis autem voluptatibus nam enim aperiam quam quibusdam unde, impedit similique aliquam praesentium. Alias, quisquam voluptas.
-    Cupiditate, harum at cum doloremque dolorem, fugiat qui quia dolores, quos possimus omnis nam! Sapiente, tempore? Architecto aspernatur qui eaque dolorem! Optio pariatur recusandae quae voluptas, delectus inventore architecto ad!
-    Nobis ipsam iusto accusantium delectus odio, sequi reiciendis eum eveniet quibusdam dolores nemo quod eligendi corrupti fugit at earum beatae architecto facilis necessitatibus sunt. Repellendus possimus impedit dolores et ullam?
-    Pariatur eos eum, ullam facilis doloribus incidunt aspernatur debitis porro obcaecati consequatur. Rerum laborum magni assumenda vitae et? Itaque illo earum deserunt autem a impedit necessitatibus rerum, quam inventore nisi!
-    Odio ea iusto asperiores nisi accusantium doloribus, temporibus quasi. Modi vel ullam corrupti? Non totam veritatis in. Nulla atque voluptatem recusandae aperiam, dolorem nihil, eveniet delectus cupiditate, dolorum amet rerum.
-  </p>
-
-
-  <p class="p2">
-    p2      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat? Doloremque, nemo libero quo omnis autem voluptatibus nam enim aperiam quam quibusdam unde, impedit similique aliquam praesentium. Alias, quisquam voluptas.
-    Cupiditate, harum at cum doloremque dolorem, fugiat qui quia dolores, quos possimus omnis nam! Sapiente, tempore? Architecto aspernatur qui eaque dolorem! Optio pariatur recusandae quae voluptas, delectus inventore architecto ad!
-    Nobis ipsam iusto accusantium delectus odio, sequi reiciendis eum eveniet quibusdam dolores nemo quod eligendi corrupti fugit at earum beatae architecto facilis necessitatibus sunt. Repellendus possimus impedit dolores et ullam?
-    Pariatur eos eum, ullam facilis doloribus incidunt aspernatur debitis porro obcaecati consequatur. Rerum laborum magni assumenda vitae et? Itaque illo earum deserunt autem a impedit necessitatibus rerum, quam inventore nisi!
-    Odio ea iusto asperiores nisi accusantium doloribus, temporibus quasi. Modi vel ullam corrupti? Non totam veritatis in. Nulla atque voluptatem recusandae aperiam, dolorem nihil, eveniet delectus cupiditate, dolorum amet rerum.
-  </p>
-
-  <svg>
-    <use xlink:href="./img/sprite.svg#right-arrow"></use>
-  </svg>
-
-  <img src="./img/img.jpg" alt="bvn">
-  <img src="./img/costs.svg" alt="bvn">
-
-  <button class="burger" aria-label="Открыть меню" aria-expanded="false"  data-burger>
-    <span class="burger__line"></span>
-  </button>
-  <svg class="">
-    <use xlink:href="img/sprite.svg#costs"></use>
-  </svg>
-
-<input type="text" placeholder="bcvbcvbcvbcvbcvbcvbcv" class="placeholder">
-
-<button class="btn btn-reset">vbcvbcv</button>
-<div class="divwrap"><div class="div">dsf</div></div>
-</div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Document</title><link rel="shortcut icon" href="favicon.ico" type="image/x-icon"><link rel="stylesheet" href="css/vendor.css"><link rel="stylesheet" href="css/main.css"><script defer="defer" src="js/main.js"></script></head><body><header class="header"><div class="container">.header</div></header><div class="container"><h1>h1 Lorem ipsum dolor sit</h1><h2>h2 Lorem ipsum dolor sit</h2><h3>h3 Lorem ipsum dolor sit</h3><p class="p1 p1--yellow">p1 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat? Doloremque, nemo libero quo omnis autem voluptatibus nam enim aperiam quam quibusdam unde, impedit similique aliquam praesentium. Alias, quisquam voluptas. Cupiditate, harum at cum doloremque dolorem, fugiat qui quia dolores, quos possimus omnis nam! Sapiente, tempore? Architecto aspernatur qui eaque dolorem! Optio pariatur recusandae quae voluptas, delectus inventore architecto ad! Nobis ipsam iusto accusantium delectus odio, sequi reiciendis eum eveniet quibusdam dolores nemo quod eligendi corrupti fugit at earum beatae architecto facilis necessitatibus sunt. Repellendus possimus impedit dolores et ullam? Pariatur eos eum, ullam facilis doloribus incidunt aspernatur debitis porro obcaecati consequatur. Rerum laborum magni assumenda vitae et? Itaque illo earum deserunt autem a impedit necessitatibus rerum, quam inventore nisi! Odio ea iusto asperiores nisi accusantium doloribus, temporibus quasi. Modi vel ullam corrupti? Non totam veritatis in. Nulla atque voluptatem recusandae aperiam, dolorem nihil, eveniet delectus cupiditate, dolorum amet rerum.</p><p class="p2">p2 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, fugiat? Doloremque, nemo libero quo omnis autem voluptatibus nam enim aperiam quam quibusdam unde, impedit similique aliquam praesentium. Alias, quisquam voluptas. Cupiditate, harum at cum doloremque dolorem, fugiat qui quia dolores, quos possimus omnis nam! Sapiente, tempore? Architecto aspernatur qui eaque dolorem! Optio pariatur recusandae quae voluptas, delectus inventore architecto ad! Nobis ipsam iusto accusantium delectus odio, sequi reiciendis eum eveniet quibusdam dolores nemo quod eligendi corrupti fugit at earum beatae architecto facilis necessitatibus sunt. Repellendus possimus impedit dolores et ullam? Pariatur eos eum, ullam facilis doloribus incidunt aspernatur debitis porro obcaecati consequatur. Rerum laborum magni assumenda vitae et? Itaque illo earum deserunt autem a impedit necessitatibus rerum, quam inventore nisi! Odio ea iusto asperiores nisi accusantium doloribus, temporibus quasi. Modi vel ullam corrupti? Non totam veritatis in. Nulla atque voluptatem recusandae aperiam, dolorem nihil, eveniet delectus cupiditate, dolorum amet rerum.</p><svg><use xlink:href="./img/sprite.svg#right-arrow"></use></svg> <img src="./img/img.jpg" alt="bvn"> <img src="./img/costs.svg" alt="bvn"> <button class="burger" aria-label="Открыть меню" aria-expanded="false" data-burger><span class="burger__line"></span></button> <svg class=""><use xlink:href="img/sprite.svg#costs"></use></svg> <input type="text" placeholder="bcvbcvbcvbcvbcvbcvbcv" class="placeholder"> <button class="btn btn-reset">vbcvbcv</button><div class="divwrap"><div class="div">dsf</div></div></div></body></html>
